syntax = "proto3";

package test.api.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/cjermain/protoc-gen-pydantic/test/api";

// ValidatedScalars exercises numeric bound constraints.
message ValidatedScalars {
  // Age must be between 0 and 150 exclusive of 0.
  int32 age = 1 [(buf.validate.field).int32.gt = 0, (buf.validate.field).int32.lte = 150];
  // Score must be in [0.0, 100.0].
  double score = 2 [(buf.validate.field).double.gte = 0.0, (buf.validate.field).double.lte = 100.0];
  // Priority must be positive.
  int64 priority = 3 [(buf.validate.field).int64.gt = 0];
  // Ratio must be non-negative and less than 1.
  float ratio = 4 [(buf.validate.field).float.gte = 0.0, (buf.validate.field).float.lt = 1.0];
  // Rank must be in [1, 10].
  uint32 rank = 5 [(buf.validate.field).uint32.gte = 1, (buf.validate.field).uint32.lte = 10];
}

// ValidatedStrings exercises string length and pattern constraints.
message ValidatedStrings {
  // Name must be between 1 and 100 characters.
  string name = 1 [(buf.validate.field).string.min_len = 1, (buf.validate.field).string.max_len = 100];
  // Code must match uppercase letters only.
  string code = 2 [(buf.validate.field).string.pattern = "^[A-Z]+$"];
  // Bio has only a max length.
  string bio = 3 [(buf.validate.field).string.max_len = 500];
  // Tag has only a min length.
  string tag = 4 [(buf.validate.field).string.min_len = 2];
}

// ValidatedRepeated exercises repeated field length constraints.
message ValidatedRepeated {
  // Items must have between 1 and 10 elements.
  repeated string items = 1 [(buf.validate.field).repeated.min_items = 1, (buf.validate.field).repeated.max_items = 10];
  // Tags must have at least 1 element.
  repeated string tags = 2 [(buf.validate.field).repeated.min_items = 1];
}

// ValidatedMap exercises map field length constraints.
message ValidatedMap {
  // Labels must have between 1 and 10 entries.
  map<string, string> labels = 1 [
    (buf.validate.field).map.min_pairs = 1,
    (buf.validate.field).map.max_pairs = 10
  ];
}
